# naobi

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autotests.yml  ci.yml  cmake.yml  codeql-analysis.yml  deploy.yml  release.yml
docs/: index.md  return_codes.md
documentation/: mkdocs.yml
include/naobi/compiler/: code_generator.hpp  compiler.hpp  composition.hpp  rule.hpp
include/naobi/data/: event.hpp  exception.hpp  function.hpp  module.hpp  template_function.hpp  variable.hpp  workflow.hpp
include/naobi/interpreter/: command.hpp  event_manager.hpp  event_pool.hpp  handler.hpp  workflow_context.hpp
include/naobi/standard/: standard_module.hpp
include/naobi/utils/: arguments.hpp  color.hpp  colors.hpp  command.hpp  errors.hpp  expression.hpp  indent_scope.hpp  keywords.hpp  logger.hpp  operation.hpp  output_type_trait.hpp  parser.hpp  rule.hpp  type.hpp
include/naobi/utils/type/: array_type.hpp  type.hpp
return_codes/: index.html
search/: search_index.json
source/: main.cpp
source/compiler/: code_generator.cpp  compiler.cpp
source/data/: event.cpp  function.cpp  module.cpp  template_function.cpp  variable.cpp  workflow.cpp
source/interpreter/: command.cpp  event_manager.cpp  event_pool.cpp  handler.cpp
source/parser/: parser.cpp
source/standard/: standard_module.cpp
source/utils/: arguments.cpp  command.cpp  expression.cpp  operation.cpp  parser.cpp  type.cpp
source/utils/type/: type.cpp
test/: compiler_test.cpp  parser_test.cpp  test.sh
test/functional/: functionalTester.py
test/functional/1Import/: main.naobi  sub.naobi
test/functional/1Import/utils/: util1.naobi  util2.naobi
test/functional/2Workflows/: main.naobi  scenario.json
test/functional/3Expressions/: main.naobi  scenario.json
test/functional/3Functions/: main.naobi
test/functional/4IfElse/: main.naobi
test/functional/5For/: main.naobi
test/gherkin/features/: array.feature  cast.feature  container_function.feature  events.feature  exceptions.feature  expression.feature  for_each.feature  functions.feature  if.feature  methods.feature  references.feature  scope.feature  templates.feature
test/gherkin/features/operations/: add.feature  addition.feature  division.feature  multiplication.feature  subtraction.feature
test/gherkin/radish/: step.py
test/module/: generator_test.cpp  install_googletest.sh  parser_test.cpp  test.sh  type_test.cpp
